<resources>
    <string name="app_name">birthday_scheduler</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="time">time</string>
    <string name="phone">phone</string>
    <string name="message">message</string>
    <string name="repeat">repeat</string>
    <string name="once">once</string>
    <string name="yearly">yearly</string>
    <string name="schedule">Schedule</string>
    <string name="cancel">Cancel</string>
</resources>
